--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "cSpell.words": [
+        "ACCREDITATIONS",
+        "Chikondi",
+        "Español",
+        "flaticon",
+        "MBBS",
+        "Phds",
+        "Textareas",
+        "untree"
+    ]
 }
